syntax = "proto3";

package proto;
option java_package = "maple.proto";
option go_package = "gosuproto";

import "profile.proto";
import "message.proto";

message SendEmailRequest {
    string                  recipient_name      = 1;
    string                  recipient_address   = 2;
    string                  subject             = 3;
    string                  template            = 4;
    map<string, string>     variables           = 5;
}

message SendEmailResponse {
    // VOID
}

message SendPushReminderRequest {
    User recipient = 1;
    WebsocketMessage message = 2;
    Channel channel = 3;
    Group group = 4;
    Game game = 5;
    repeated User participants = 6;
    bool wasMention = 7;
}

message SendPushReminderResponse {
    User recipient = 1;
    WebsocketMessage message = 2;
    Channel channel = 3;
    Group group = 4;
    Game game = 5;
    repeated User participants = 6;
}

// RPC - Push

service MailService {
    rpc SendEmail (SendEmailRequest) returns (SendEmailResponse);
    rpc SendPushReminder (SendPushReminderRequest) returns (SendPushReminderResponse);
}
